name:                sansible
version:             0.1.0.0
synopsis:            Gross transpiler from Haskell to Ansible
license:             MIT
license-file:        LICENSE
author:              Thomas Franquelin
maintainer:          ostapneko@gmail.com
category:            System
build-type:          Simple
cabal-version:       >= 1.18

library
  build-depends:       base >= 4.6 && < 5,
                       aeson >= 0.8,
                       bytestring,
                       containers,
                       text,
                       unordered-containers,
                       yaml >= 0.8 && < 1.0
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving,
                       OverloadedStrings
  exposed-modules:     Data.Sansible,
                       AnsibleModules.Apt
