name:                sansible
version:             0.1.0.0
synopsis:            Gross transpiler from Haskell to Ansible
license:             MIT
license-file:        LICENSE
author:              Thomas Franquelin
maintainer:          ostapneko@gmail.com
category:            System
build-type:          Simple
cabal-version:       >= 1.18

library
  build-depends:       base >= 4.6 && < 5,
                       aeson >= 0.8,
                       bytestring,
                       containers,
                       network-uri >= 2.6 && < 3,
                       text,
                       unordered-containers,
                       yaml >= 0.8 && < 1.0
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving,
                       OverloadedStrings,
                       TemplateHaskell
  exposed-modules:     Data.Sansible,
                       Data.Sansible.Playbook,
                       Data.Sansible.Inventory,
                       AnsibleModules.Apt,
                       AnsibleModules.AptKey,
                       AnsibleModules.AptRepository,
                       AnsibleModules.Copy,
                       AnsibleModules.Cron,
                       AnsibleModules.File,
                       AnsibleModules.Git,
                       AnsibleModules.GetUrl,
                       AnsibleModules.Group,
                       AnsibleModules.Lineinfile,
                       AnsibleModules.PostgresqlUser,
                       AnsibleModules.PostgresqlDB,
                       AnsibleModules.Service,
                       AnsibleModules.Shell,
                       AnsibleModules.User

executable sansible-vault
  main-is:             Main.hs
  hs-source-dirs:      vaultSrc
  build-depends:       base >= 4.6 && < 5,
                       bytestring,
                       cipher-aes,
                       cryptohash,
                       directory,
                       filepath,
                       DRBG
  default-extensions:  OverloadedStrings
