name:                sansible
version:             0.1.0.0
synopsis:            Gross transpiler from Haskell to Ansible
license:             MIT
license-file:        LICENSE
author:              Thomas Franquelin
maintainer:          ostapneko@gmail.com
category:            System
build-type:          Simple
cabal-version:       >= 1.18

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       bytestring,
                       containers,
                       network-uri,
                       text,
                       unordered-containers,
                       yaml
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving,
                       OverloadedStrings,
                       TemplateHaskell
  exposed-modules:     Data.Sansible,
                       Data.Sansible.Playbook,
                       Data.Sansible.Inventory,
                       AnsibleModules.Apt,
                       AnsibleModules.AptKey,
                       AnsibleModules.AptRepository,
                       AnsibleModules.Copy,
                       AnsibleModules.Cron,
                       AnsibleModules.DebConf,
                       AnsibleModules.File,
                       AnsibleModules.Git,
                       AnsibleModules.GetUrl,
                       AnsibleModules.Group,
                       AnsibleModules.Hostname,
                       AnsibleModules.Lineinfile,
                       AnsibleModules.Pip,
                       AnsibleModules.PostgresqlUser,
                       AnsibleModules.PostgresqlDB,
                       AnsibleModules.Service,
                       AnsibleModules.Shell,
                       AnsibleModules.User,
                       AnsibleModules.WaitFor

executable sansible-vault
  main-is:             Main.hs
  hs-source-dirs:      vaultSrc
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       cipher-aes,
                       cryptohash,
                       directory,
                       filepath,
                       DRBG
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/ostapneko/sansible
